force-app/main/default/objects/MN_UserOption__c/MN_UserOption__c.object-meta.xml
<CustomObject>
    <label>MN UserOption</label>
    <nameField>
        <label>MN UserOption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN UserOptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>