force-app/main/default/objects/MN_UserOption__c/fields/Closed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Closed_Activities__c</fullName>
    <label>Closed Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>