force-app/main/default/objects/MN_UserOption__c/fields/Open_Activities__c.field-meta.xml
<CustomField>
    <fullName>Open_Activities__c</fullName>
    <label>Open Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>