force-app/main/default/objects/MN_UserOption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Closed_Activities__c</columns>
    <columns>Open_Activities__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>